--- a/client/src/component/Input/input.scss
+++ b/client/src/component/Input/input.scss
@@ -2,18 +2,17 @@ $top: 15px;
 $left: 55px;
 
 
-@mixin input {
+@mixin form-input {
     width: 100%;
     height: 50%;
     border: none; 
-    border-radius: 15px;
-    background-color: #39181f;
+    background-color: transparent;
     background-repeat:no-repeat;
     background-position: 3% 0%;
     padding-left: 40px;
     margin: 15px;
     color: white;
-    border: 1px solid #ADD100;
+    border-bottom: 1px solid #b78be1;
 
     &:focus{
         outline: none;
@@ -25,7 +24,7 @@ $left: 55px;
         font-size: 14px;
 
         padding: 0% 1%;
-        background-color: #1f242e;
+        background-color: transparent;
         border-radius: 12px;
     }
 
@@ -39,4 +38,38 @@ $left: 55px;
     //     top: $top - 22px;
     //     font-size: 14px;
     // }
+}
+
+.input-block{
+    position: relative;
+
+    .form__login{
+        @include form-input();
+        background-image:url('../../../public/login.svg');
+        background-size: 7%;
+        background-position: 4% 0%;
+    }
+
+    .form__email{
+        @include form-input();
+        background-image:url('../../../public/email.svg');
+    }
+    
+    .form__password{
+        @include form-input();
+        background-image:url('../../../public/lock.svg'); 
+    }
+
+    .form__сonfirm{
+        @include form-input();
+        background-image:url('../../../public/lock.svg'); 
+    }
+
+    label{
+        position: absolute;
+        pointer-events: none;
+        transition: 0.5s;
+        top: $top;
+        left: $left;
+    }
 }
