--- a/client/src/component/RegistrationForm/RegistrationForm.scss
+++ b/client/src/component/RegistrationForm/RegistrationForm.scss
@@ -1,49 +1,6 @@
 $top: 15px;
 $left: 55px;
 
-@mixin form-input {
-    width: 100%;
-    height: 50%;
-    border: none; 
-    border-radius: 15px;
-    background-color: #39181f;
-    background-repeat:no-repeat;
-    background-position: 3% 0%;
-    padding-left: 40px;
-    margin: 15px;
-    color: white;
-    border: 1px solid #ADD100;
-
-    &:focus{
-        outline: none;
-    }
-
-    &:focus ~ label,
-    &:not(:placeholder-shown) ~ label{
-        @for $i from 1 through 4{
-            
-        }
-        top: $top - 23px;
-        font-size: 14px;
-
-        padding: 0% 1%;
-        background-color: #1f242e;
-        border-radius: 12px;
-    }
-
-    &:invalid{
-        color: red;
-        border-color: red;
-    }
-
-    
-    // &:invalid ~ label{
-    //     top: $top - 22px;
-    //     font-size: 14px;
-    // }
-}
-
-
 .registrations{
     display: flex;
     flex-direction: column;
@@ -56,7 +13,6 @@ $left: 55px;
         width: 50%;
         display: flex;
         flex-direction: column;
-
         align-items: stretch;
         align-content: space-around;
         align-self: center;
@@ -65,40 +21,7 @@ $left: 55px;
         h3{
             text-align: center;
         }
-        
-        .input-block{
-            position: relative;
 
-            .form__login{
-                @include form-input();
-                background-image:url('../../../public/login.svg');
-                background-size: 7%;
-                background-position: 4% 0%;
-            }
-
-            .form__email{
-                @include form-input();
-                background-image:url('../../../public/email.svg');
-            }
-            
-            .form__password{
-                @include form-input();
-                background-image:url('../../../public/lock.svg'); 
-            }
-
-            .form__сonfirm{
-                @include form-input();
-                background-image:url('../../../public/lock.svg'); 
-            }
-
-            label{
-                position: absolute;
-                pointer-events: none;
-                transition: 0.5s;
-                top: $top;
-                left: $left;
-            }
-        }
     }
 
     .register{
@@ -110,7 +33,7 @@ $left: 55px;
         cursor: pointer;
         outline: inherit;
 
-        background-image: linear-gradient(to right, #b68a1b 0%, #7B920A  51%, #ADD100  100%);
+        background-image: linear-gradient(to right, rgb(129, 88, 169) 0%, #f0c1ff  90%);
         margin-top: 2%;
         padding: 5px 20px;
         text-align: center;
@@ -118,7 +41,7 @@ $left: 55px;
         transition: 0.5s;
         background-size: 200% auto;
         color: white;            
-        box-shadow: 0 0 15px #eee;
+        box-shadow: 0 0 15px rgba(129, 88, 169, 0.8);
         border-radius: 0px 0px 10px 10px;
         display: block;
         text-decoration: none;
@@ -127,6 +50,7 @@ $left: 55px;
 
         .register:hover {
             background-position: right center; /* change the direction of the change here */
-            color: #fff;
+            color: #39181f;
+            box-shadow: 0 0 15px rgb(129, 88, 169);
         }
     }
