--- a/client/src/component/loginForm/loginForm.scss
+++ b/client/src/component/loginForm/loginForm.scss
@@ -11,7 +11,7 @@ $left: 55px;
     padding-left: 40px;
     margin: 15px;
     color: white;
-    border-bottom: 1px solid #ADD100;
+    border-bottom: 1px solid #b78be1;
 
     &:focus{
         outline: none;
@@ -114,8 +114,8 @@ $left: 55px;
                 width: 50%;
                 padding: 1% 15%;
                 margin-right: 2%;
-                background-image: linear-gradient(to right, #ff2525 0%, #FFE53B  90%);
-                box-shadow: 0 0 15px rgba(255, 37, 37, 0.8);
+                background-image: linear-gradient(to right, rgb(129, 88, 169) 0%, #f0c1ff  90%);
+                box-shadow: 0 0 15px rgb(129, 88, 169, 0.8);
                 transition: 0.4s;
                 background-size: 200% auto;
                 color: white;         
@@ -125,7 +125,7 @@ $left: 55px;
 
             .login-button:hover{
                 background-position: right center; /* change the direction of the change here */
-                color: #fff;
+                color: #39181f;
             }
 
 
@@ -148,7 +148,7 @@ $left: 55px;
         cursor: pointer;
         outline: inherit;
         
-        background-image: linear-gradient(to right, #ff2525 0%, #FFE53B  90%);
+        background-image: linear-gradient(to right, rgb(129, 88, 169) 0%, #f0c1ff  90%);
         margin-top: 2%;
         padding: 5px 20px;
         text-align: center;
@@ -156,7 +156,7 @@ $left: 55px;
         transition: 0.5s;
         background-size: 200% auto;
         color: white;            
-        box-shadow: 0 0 15px rgba(255, 37, 37, 0.8);
+        box-shadow: 0 0 15px rgba(129, 88, 169, 0.8);
         border-radius: 0px 0px 10px 10px;
         display: block;
         text-decoration: none;
@@ -165,8 +165,8 @@ $left: 55px;
 
       .register:hover {
         background-position: right center; /* change the direction of the change here */
-        color: rgba(0, 0, 0, 0.6);
-        box-shadow: 0 0 15px #FFE53B;
+        color: #39181f;
+        box-shadow: 0 0 15px rgb(129, 88, 169);
       }
 
 }
