--- a/client/src/component/RegistrationForm/RegistrationForm.scss
+++ b/client/src/component/RegistrationForm/RegistrationForm.scss
@@ -9,6 +9,12 @@ $left: 55px;
     border-radius: 10px 10px 0px 0px;
     background-color:rgb(33, 34, 37, 0.4);
 
+    .back_login{
+        position: absolute;
+        padding-left: 1em;
+        padding-top: 0.938em;
+    }
+
     .email-registration{
         width: 50%;
         display: flex;
