--- a/client/src/component/RegistrationForm/RegistrationForm.scss
+++ b/client/src/component/RegistrationForm/RegistrationForm.scss
@@ -15,7 +15,7 @@ $left: 55px;
         padding-top: 0.938em;
     }
 
-    .email-registration{
+    #email-registration{
         width: 50%;
         display: flex;
         flex-direction: column;
