--- a/client/src/component/Header/Header.scss
+++ b/client/src/component/Header/Header.scss
@@ -5,6 +5,17 @@ header{
     align-items: center;
     justify-content: center;
 
+    .logo{
+        display: flex;
+        margin: 0 20px
+    }
+
+    .nav-link{
+        display: flex;
+        gap: 20px;
+        margin: 0 20px 0 auto;
+    }
+
     background-color: #161819;
     span{
         font-size: 40px;
