--- a/client/src/Pages/WelcomePage/Welcome.scss
+++ b/client/src/Pages/WelcomePage/Welcome.scss
@@ -1,22 +1,33 @@
+
+@mixin selection{
+    &:hover{
+        background-color: rgb(129, 88, 169);
+        color: black;
+        transition: 0.5s;
+        a{
+            color: rgb(165, 23, 165);
+        }
+    }
+}
+
+
 .page{
     display: flex;
     flex-wrap: wrap;
     background-color: #161819;
     color: white; 
-
     .about{
         display: flex;
 
         min-height: 35vh;
         width: 100%;
-
         div{
             display: flex;
             width: 50%;
             justify-content: center;
             align-items: center;
             border: 1px solid black;
-
+            @include selection();
             ul{
                 list-style-type: none;
 
@@ -34,7 +45,7 @@
         display: flex;
         flex-direction: column;
         border: 1px solid black;
-
+        @include selection();
         justify-content: center;
         align-items: center;
 
@@ -58,11 +69,19 @@
         }
     }
 
+    
     footer{
+        @include selection();
         width: 100%;
         min-height: 5vh;
         display: flex;
+        align-items: center;
+        justify-content: center;
         border: 1px solid black;
+
+        a{
+            text-decoration: none;
+        }
     }
 }
     
