--- a/client/src/component/Header/Header.scss
+++ b/client/src/component/Header/Header.scss
@@ -7,13 +7,37 @@ header{
 
     .logo{
         display: flex;
-        margin: 0 20px
-    }
+        margin: 0 20px;
+
+        background: linear-gradient(90deg, #e933ff, #ffb400, #ff3333, #334dff, #e933ff);
+        background-size: 200% auto;
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        animation: textflow 5s linear infinite;
+      }
+      
+      @keyframes textflow {
+        from {background-position: 0% center}         
+        to {background-position: 200% center}
+      }
 
     .nav-link{
         display: flex;
         gap: 20px;
         margin: 0 20px 0 auto;
+
+        a{
+            text-decoration: none;
+            color: white;
+            background-image: linear-gradient(to right, rgb(129, 88, 169) 0%, #f0c1ff  90%);
+            padding: 5px 15px;
+            text-align: center;
+            transition: 0.5s;
+            background-size: 200% auto;
+            box-shadow: 0 0 15px rgba(129, 88, 169, 0.8);
+            border-radius: 10px;
+        }
     }
 
     background-color: #161819;
