--- a/client/src/Pages/WelcomePage/Welcome.scss
+++ b/client/src/Pages/WelcomePage/Welcome.scss
@@ -45,9 +45,47 @@
         display: flex;
         flex-direction: column;
         border: 1px solid black;
-        @include selection();
         justify-content: center;
         align-items: center;
+
+        ul{
+            display: none;
+            list-style: none;
+            padding: 5px;
+        }
+
+        .add{
+           display: none;
+           margin-top: auto;
+           margin-bottom: 5px; 
+        }
+
+        &:hover{
+            .nnn{
+                display: none;
+            }
+
+            .news-block{
+                display: flexbox;
+            }
+            ul{
+                display: block;
+            }
+
+            .add{
+                display: grid;
+                justify-self: flex-end;
+                text-decoration: none;
+                color: white;
+                background-image: linear-gradient(to right, #161819 50%, white  50%);
+                padding: 5px 15px;
+                text-align: center;
+                transition: 0.5s;
+                background-size: 200% auto;
+                box-shadow: 0 0 15px rgba(255, 255, 255, 0.8);
+                border-radius: 10px;
+            }
+        }
 
         button{
             color: inherit;
@@ -67,6 +105,8 @@
             text-align: center;
             text-decoration: none;
         }
+
+        @include selection();
     }
 
     
