--- a/client/src/component/Servers/Servers.scss
+++ b/client/src/component/Servers/Servers.scss
@@ -22,8 +22,14 @@
 
     .servers{
         height: 76%;
-        padding: 10% 40% 50% 40%;
+        padding: 15% 20% 0 30%;
         border-bottom: 1px solid rgb(129, 88, 169);
+        ul{
+            list-style: none;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+        }
     }
 
     .settings{
